applications/app-web-monetnaildesign/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: monetnaildesign
    name: monetnaildesign
    argocd.argoproj.io/managed-by: openshift-gitops-operator
    openshift.io/cluster-monitoring: 'true'
  name: monetnaildesign
spec:
  finalizers:
  - kubernetes
