applications/app-web-monetnaildesign/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Exposes and load balances the application pods
  labels:
    app: monetnaildesign-nginx
    template: nginx-example
  name: monetnaildesign-nginx
spec:
  ports:
  - name: web
    port: 80
    targetPort: 8080
  selector:
    name: monetnaildesign-nginx
